package io.github.spiritstead.entity;

public enum Direction {
    UP,
    DOWN,
    LEFT,
    RIGHT,
    ANY;

}
